1155. 掷骰子等于目标和的方法数 题解更新

--- a/Solutions/1155. 掷骰子等于目标和的方法数.md
+++ b/Solutions/1155. 掷骰子等于目标和的方法数.md
@@ -1,10 +1,11 @@
 ---
 title: 1155. 掷骰子等于目标和的方法数
-time: 2023-10-25
+time: 2023-10-24
 tags:
   - 题解
   - dfs
   - 动态规划
+  - 记忆化搜索
 cssclasses:
   - 力扣题解
 ---
@@ -55,22 +56,113 @@ Related Topics
 这样看下来其实会比较类似于完全背包问题，只不过每个背包的大小都是一样的，每个物品的重量也都是1
 
 其实也可以将问题更简单化：
->假设我们第一个骰子投出来的是1，后面的问题就成了
-
+- 假设第一个骰子投出来是1，后面的问题就成了算用`n - 1`个骰子，投出`target - 1`的情况个数
+- 假设第一个骰子投出来时2，后面的问题就成了算用`n - 1`个骰子，投出`target - 2`的情况个数
+	- 假设第二个骰子投出来时3，后面的问题就成了算用`n - 2`个骰子，投出`target-2-3`的情况个数
+	- ……
+也就是采用dfs获取到全部的情况
 ---
 ## 解题思路
+### 记忆化搜索
+根据上面的分析，可以得到一个递归式
+> `dfs(n,target) =  dfs(n-1, target-1) + dfs(n-1, target-2) + …… + dfs(n-1, target-k)`
 
+注意两点：
+- target比n小的时候记得跳出，每个骰子至少得有1
+- dfs(0,0)=1，表示没有骰子，数字之和恰好等于 0 有 1 种方案
 
+```
+dfs(骰子个数n,需要target){
+	if(n==0 && target==0) return 1;
+	if(n==0 || target==0) return 0;
+	for(i: 1 -> k){
+		if(target<i) break;
+		res += dfs(n-1, target - i);
+	}
+	return res;
+}
+```
 
----
-## 对应代码
+这里我们发现在`dfs`的过程中会出现重复的计算，所以可以采用记忆化搜索的方式减少`dfs`的次数
+- 可以用双层`hashmap`，分别以`n`和`target`为主键
+- 也可以使用二维数组，大小为`n * target`，直接读取数组
+#### 对应代码
+```java
+/**  
+ * 执行耗时:2 ms,击败了98.04% 的Java用户  
+ * 内存消耗:39.7 MB,击败了40.78% 的Java用户  
+ */  
+class Solution {  
+    private static final int MOD = 1_000_000_007;  
+    int[][] memo = null;  
+  
+    public int numRollsToTarget(int n, int k, int target) {  
+        if (memo == null) memo = new int[n + 1][target + 1];  
+        if (target < n || target > n * k) return 0;  
+        if (n == 0 && target == 0) return 1;  
+        if (n == 0 || target == 0) return 0;  
+        int res = 0;  
+        for (int num = 1; num <= k && num <= target; num++) {  
+            int orDefault = memo[n - 1][target - num];  
+            if (orDefault != 0) {  
+                res = (res + orDefault) % MOD;  
+            } else {  
+                // 递归，找(n-1)个骰子，达到(target-num)的种数  
+                res = (res + numRollsToTarget(n - 1, k, target - num)) % MOD;  
+            }  
+        }  
+        // 记忆化  
+        memo[n][target] = res;  
+        return res;  
+    }  
+}
+```
+#### 复杂度分析
+**时间复杂度**：`O(n * k * target)`。由于每个状态只会计算一次，**动态规划的时间复杂度 = 状态个数 *  单个状态的计算时间**。本题中状态个数等于 `O(n * target)`，单个状态的计算时间为 `O(k)`，所以动态规划的时间复杂度为 `O(n * k * target)`。
+**空间复杂度**：`O(n * target)`。有多少个状态，数组的大小就是多少。
+ 
+### 动态规划
 
-
-
-### 复杂度分析
-
-
+在已经有了记忆化搜索的经验后，我们能发现之前的做的递归是一个**自顶向下**的过程，是从题目给出的`n`与`target`出发，然后依次将`n`与`target`减小，**直到两者为0**
+那么我们是不是能反过来，**自底向上**来算呢
+也就是从`dfs(0,0)`出发，往上算`dfs(1,1)`直到`dfs(n,target)`
+这里定义dp数组，`dp[i][i]`与`dfs(i,j)`的定义是一样的
+- 都表示用`i`个骰子投出数字之和为`j`的情况个数
+于是我们可以直接对记忆化搜索的代码进行改造
+#### 对应代码
+```java
+/**  
+ * 执行耗时:6 ms,击败了92.55% 的Java用户  
+ * 内存消耗:38.4 MB,击败了78.43% 的Java用户  
+ */  
+class Solution2 {  
+    private static final int MOD = 1_000_000_007;  
+  
+    public int numRollsToTarget(int n, int k, int target) {  
+        if (target < n || target > n * k) return 0;  
+        int[][] dp = new int[n + 1][target + 1];  
+        dp[0][0] = 1;  
+        // 算每个骰子  
+        for (int i = 1; i <= n; i++) {  
+            // 在不算当前骰子的情况下，当前骰子能得到的分数范围  
+            for (int j = i; j <= target - (n - i); j++) {  
+                // 当前骰子能掷出来的点数范围  
+                for (int num = 1; num <= k && num <= j; num++) {  
+                    // 动态规划  
+                    dp[i][j] = (dp[i][j] + dp[i - 1][j - num]) % MOD;  
+                }  
+            }  
+        }  
+        return dp[n][target];  
+    }  
+}
+```
+#### 复杂度分析
+复杂度和上面的记忆化搜索是完全一样的，但是实际上还是可以将二维数组优化一维数组
+因为在最后一层循环的时候实际上是求的`dp[i-1][j-k]`到`dp[i-1][j-1]`，可以用**前缀和**优化掉这一层循环，直接用后边减前边就好了，但是时间有限就没调了
 
 ---
 ## 最后
 
+其实看到tag里面动态规划，还没想到要怎样用动态规划来做，第一反应还是dfs，然后优化为记忆化搜索。
+这里还是要感谢[灵神](https://leetcode.cn/u/endlesscheng/)的[题解](https://leetcode.cn/problems/number-of-dice-rolls-with-target-sum/solutions/2495836/ji-bai-100cong-ji-yi-hua-sou-suo-dao-di-421ab/)，解释锝很通透
