--- a/Solutions/2698. 求一个整数的惩罚数.md
+++ b/Solutions/2698. 求一个整数的惩罚数.md
@@ -72,10 +72,10 @@ Related Topics
 dfs(待分割的数 num, 目标值 target){
 	for(num的位数，需要把每一位都分割一次){
 		if(dfs(num被分割后剩下的数据, target - num被分割下来的数)){
-			return true
+			return true;
 		}
 	}
-	return false
+	return false;
 }
 ```
 
