--- a/Solutions/1155. 掷骰子等于目标和的方法数.md
+++ b/Solutions/1155. 掷骰子等于目标和的方法数.md
@@ -9,8 +9,9 @@ tags:
 cssclasses:
   - 力扣题解
 ---
-
 # [1155. 掷骰子等于目标和的方法数](https://leetcode.cn/problems/number-of-dice-rolls-with-target-sum/)
+
+## 题目详情
 
 这里有 `n` 个一样的骰子，每个骰子上都有 `k` 个面，分别标号为 `1` 到 `k` 。
 
