--- a/Solutions/2698. 求一个整数的惩罚数.md
+++ b/Solutions/2698. 求一个整数的惩罚数.md
@@ -10,6 +10,7 @@ cssclasses:
 ---
 # [2698. 求一个整数的惩罚数](https://leetcode.cn/problems/find-the-punishment-number-of-an-integer/)
 
+## 题目详情
 
 给你一个正整数 `n` ，请你返回 `n` 的 **惩罚数** 。
 `n` 的 **惩罚数** 定义为所有满足以下条件 `i` 的数的平方和：
@@ -18,7 +19,6 @@ cssclasses:
 
 **示例 1：**
 ```
-
 输入：n = 10  
 输出：182  
 解释：总共有 3 个整数 i 满足要求：  
