2127. 参加会议的最多员工数

--- a/Solutions/2003. 每棵子树内缺失的最小基因值.md
+++ b/Solutions/2003. 每棵子树内缺失的最小基因值.md
@@ -108,8 +108,7 @@ Related Topics
 	- 这里还是需要用到dfs，因为父节点中，还有其他子节点，需要确定当前最小的基因值总还是绕过不dfs查找子树中所有的基因值
 	- 但是当前的遍历是直接往上遍历，也就意味着也用记忆化搜索，遍历过的节点就不用再次遍历了 
 
-> 本题还可以继续对dfs进行优化，或使用动态规划、并查集进行求解，但是时间有限同时我的初始思路就是dfs就不再进行优化了
-
+> 本题还可以继续对dfs进行优化，或使用[[Origin/动态规划|动态规划]]、[[Origin/并查集|并查集]]进行求解，但是时间有限同时我的初始思路就是dfs就不继续优化了
 ---
 ## 对应代码
 
